Add getBonds() to every molecule implementation